src/objects/Work_Order_Activity_Log_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coordinate__c</fullName>
        <label>Coordinate</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE(TimeStamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <formula>(StatusEnd__c  -  TimeStamp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Minutes__c</fullName>
        <formula>(StatusEnd__c - TimeStamp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Raw__c</fullName>
        <formula>(StatusEnd__c - TimeStamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Raw)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Text__c</fullName>
        <formula>/*
TEXT(
 FLOOR(StatusEnd__c - TimeStamp__c)
)  &amp; &quot; Days &quot; &amp;
*/
IF(ISNULL(StatusEnd__c - TimeStamp__c), &quot;&quot;, 



 IF(FLOOR(MOD((StatusEnd__c - TimeStamp__c)*24,24))=0, &quot;&quot;, 
TEXT(
FLOOR(MOD((StatusEnd__c - TimeStamp__c)*24,24))
         )  &amp;&quot; Hours &quot;)

 &amp;

 IF(ROUND(MOD((StatusEnd__c - TimeStamp__c)*1440,60),0)=0, &quot;&quot;, 
TEXT(
ROUND(MOD((StatusEnd__c - TimeStamp__c)*1440,60),0)
) &amp;&quot; Minutes &quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Calculation__c</fullName>
        <formula>OR(
TEXT(Status__c) = &quot;Start Job&quot;, 
TEXT(Status__c) = &quot;Start at Equipment&quot;,
TEXT(Status__c) = &quot;Finished at Equipment&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MapUrl__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?z=12&amp;t=m&amp;q=&quot; + TEXT(Coordinate__Latitude__s)  + &quot;+&quot; + TEXT(Coordinate__Longitude__s) + &quot;&amp;ll=&quot; + TEXT(Coordinate__Latitude__s)  + &quot;+&quot; + TEXT(Coordinate__Longitude__s),&quot;Map&quot;,&quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OffEquipment__c</fullName>
        <formula>OR(
TEXT(Status__c) =&quot;Start Job&quot;,
TEXT(Status__c) =&quot;Finished at Equipment&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OffEquipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnEquipment__c</fullName>
        <formula>TEXT(Status__c) =&quot;Start at Equipment&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnEquipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusEnd__c</fullName>
        <label>Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Start Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start at Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished at Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Put Job On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished for the Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Time Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tradesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tradesman</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Order Activity Log Entries</relationshipLabel>
        <relationshipName>Work_Order_Activity_Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Activity_Log_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Activity Log</label>
        <referenceTo>Work_Order_Activity_Log__c</referenceTo>
        <relationshipLabel>Work Order Activity Log Entries (Work Order Activity Log)</relationshipLabel>
        <relationshipName>Work_Order_Activity_Log_Entries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Activity</label>
        <referenceTo>Work_Order_Activity__c</referenceTo>
        <relationshipLabel>Work Order Activity Log Entries</relationshipLabel>
        <relationshipName>Work_Order_Activity_Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Work Order Activity Log Entry</label>
    <nameField>
        <displayFormat>Log - {0000000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Activity Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Log_Entry_Date</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE( TimeStamp__c ) &lt;&gt;  Work_Order_Activity_Log_Lookup__r.Date__c</errorConditionFormula>
        <errorDisplayField>TimeStamp__c</errorDisplayField>
        <errorMessage>Time Stamp Date must match Activity Log Date</errorMessage>
    </validationRules>
</CustomObject>